support spaces and multiple lines

--- a/styles.scss
+++ b/styles.scss
@@ -68,7 +68,6 @@ h2 {
 .char {
   width: 182px;
   height: 268px;
-  animation: animateCharacter 1s steps(1) infinite;
 }
 
 // number of pixels from the top for where the character starts
@@ -105,30 +104,30 @@ $spritesheet-column-positions: (
   0px, 220px, 448px, 670px, 895px, 1120px, 1343px, 1569px, 1792px, 2016px
 );
 
-$framesPerCharacter: 10;
-
-@keyframes animateCharacter {
-  0% {
-    background-position-x: -1 * list.nth($spritesheet-column-positions, 10);
-  }
-  @for $i from 1 through $framesPerCharacter {
-    $percent: math.div($i, $framesPerCharacter) * 100%;
-    #{$percent} {
-      background-position-x: -1 * list.nth($spritesheet-column-positions, $i);
+@mixin char-animation($color, $char-code, $frames) {
+  @keyframes #{$color}-#{$char-code} {
+    0% {
+      background-position-x: -1 * list.nth($spritesheet-column-positions, 10);
     }
+    @for $i from 1 through $frames {
+      $percent: math.div($i, $frames) * 100%;
+      #{$percent} {
+        background-position-x: -1 * list.nth($spritesheet-column-positions, $i);
+      }
+    }
+  }
+  
+  .#{$color}-#{$char-code} {
+    animation: #{$color}-#{$char-code} 1s steps(1) infinite;
+    background-image: url('spritesheets/#{$color}.png');
+    background-position-y: -1 * map.get($spritesheet-row-positions, $char-code);
   }
 }
 
 $colors: 'cyan', 'magenta', 'yellow', 'black';
 
 @each $color in $colors {
-  .#{$color} {
-    background-image: url('spritesheets/#{$color}.png');
-  }
-}
-
-@for $char-code from 65 through 90 {
-  .char-code-#{$char-code} {
-    background-position-y: -1 * map.get($spritesheet-row-positions, $char-code);
+  @for $charCode from 65 through 90 {
+    @include char-animation($color, $charCode, 10);
   }
 }
