--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,12 @@ body {
 }
 
 header {
+  padding-bottom: 20px;
   margin-bottom: 40px;
   border-bottom: 1px solid black;
+}
+header h1 {
+  margin-bottom: 8px;
 }
 
 #container {
