--- a/styles.scss
+++ b/styles.scss
@@ -17,8 +17,13 @@ body {
 }
 
 header {
+  padding-bottom: 20px;
   margin-bottom: 40px;
   border-bottom: 1px solid black;
+
+  h1 {
+    margin-bottom: 8px;
+  }
 }
 
 #container {
