--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@ header {
   h1 {
     margin-bottom: 8px;
   }
+
+  p {
+    margin: 8px 0;
+    max-width: 600px;
+  }
 }
 
 #container {
@@ -81,6 +86,7 @@ textarea {
   line-height: 24px;
   height: 100px;
   text-transform: uppercase;
+  margin-top: 8px;
 }
 
 input[type="range"],
